--- a/app/views/project/view.html.erb
+++ b/app/views/project/view.html.erb
@@ -1,1 +1,5 @@
-<h1>Project Name</h1>
+<h1><%= @project.title %></h1>
+<h4>Status: <%= @project.status %></h4>
+<p><%= @project.description %></p>
+
+<h4>Comments</h4>
