--- a/app/views/project/view.html.erb
+++ b/app/views/project/view.html.erb
@@ -2,4 +2,8 @@
 <h4>Status: <%= @project.status %></h4>
 <p><%= @project.description %></p>
 
+<h4>Updates</h4>
+TODO: integrate updates
+
 <h4>Comments</h4>
+TODO: integrate comments via discu
