--- a/app/views/project/new.html.erb
+++ b/app/views/project/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create a new Project</h1>
 
-<%= form_tag(controller: "project", action: "new", method: "post") do %>
+<%= form_tag(controller: "project", action: "create", method: "post") do %>
 	<%= label_tag(:sno, "ID number") %>
   	<%= text_field_tag(:sno) %>
 
