--- a/app/views/update/new.html.erb
+++ b/app/views/update/new.html.erb
@@ -1,15 +1,17 @@
 <h1>New Update for Project <%= @project.sno %></h1>
 
 <%= form_tag(controller: "update", action: "create", method: "post") do %>
+  <div class="form-group">
 	<%= label_tag(:title, "Update Title") %>
-  	<%= text_field_tag(:title) %>
-
+  	<%= text_field_tag(:title, nil, class: "form-control")  %>
+  </div>
+  <div class="form-group">
   	<%= label_tag(:url, "URL") %>
-  	<%= text_field_tag(:url) %>
-
+  	<%= text_field_tag(:url, nil, class: "form-control") %>
+  </div>
+  <div class="form-group">
 	<%= label_tag(:description, "Update Description") %>
-  	<%= text_field_tag(:description) %>
-
-  	<%= submit_tag("Save") %>
-
+  	<%= text_area_tag(:description, nil, class: "form-control") %>
+  </div>
+  	<%= submit_tag("Save", class: "btn btn-default") %>
 <% end %>
