--- a/app/views/project/show.html.erb
+++ b/app/views/project/show.html.erb
@@ -3,6 +3,14 @@
 <p><%= @project.description %></p>
 
 <h4>Updates</h4>
+
+<% @updates.each do |u| %>
+
+	<%= u.title %>
+	<%= u.description %>
+	<%= u.url %>
+
+<% end %>
 <!--TODO: integrate updates-->
 
 <h4>Comments</h4>
