--- a/app/views/project/new.html.erb
+++ b/app/views/project/new.html.erb
@@ -1,15 +1,18 @@
 <h1>Create a new Project</h1>
 
 <%= form_for @project, url: {:action => :create} , :html=>{:method=>:post} do |f| %>
+<div class="form-group">
 	<%= label_tag(:sno, "ID number") %>
-  	<%= f.text_field :sno %>
-
+  	<%= f.text_field :sno, :class => "form-control" %>
+</div>
+<div class="form-group">
   	<%= label_tag(:title, "Project Title") %>
-  	<%= f.text_field :title %>
-
+  	<%= f.text_field :title, :class => "form-control" %>
+</div>
+<div class="form-group">
 	<%= label_tag(:description, "Project Description") %>
-  	<%= f.text_field :description %>
-
-  	<%= submit_tag("Save") %>
+  	<%= f.text_field :description, :class => "form-control" %>
+</div>
+  	<%= submit_tag("Save", class: "btn btn-default") %>
 
 <% end %>
