added links, hide edit urls behind signin wall

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
 <% if alert %>
   <p class="alert alert-danger"><%= alert %></p>
 <% end %>
+<h1>Manifesto Tracker</h1>
 <%= yield %>
 </div>
 </body>
