--- a/app/views/project/show.html.erb
+++ b/app/views/project/show.html.erb
@@ -4,8 +4,10 @@
 <p><%= @project.description %></p>
 
 <h4>Updates</h4>
+<% if user_signed_in? %>
+    <%= link_to "Add Update", controller: "update", action: "new", project_id: @project.id %>
+<% end %>
 
-<%= link_to "Add Update", controller: "update", action: "new", project_id: @project.id %>
 <% @updates.each do |u| %>
 
 	<%= u.title %>
@@ -13,7 +15,7 @@
 	<%= u.url %>
 
 <% end %>
-<!--TODO: integrate updates-->
+
 
 <h4>Comments</h4>
 <!-- TODO: integrate comments via discuz -->
