--- a/app/views/update/new.html.erb
+++ b/app/views/update/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Update for Project <%= @project.sno %></h1>
 
+<%= link_to "Back", :back %>
 <%= form_tag(controller: "update", action: "create", method: "post") do %>
   <div class="form-group">
 	<%= label_tag(:title, "Update Title") %>
