--- a/app/views/project/new.html.erb
+++ b/app/views/project/new.html.erb
@@ -11,7 +11,7 @@
 </div>
 <div class="form-group">
 	<%= label_tag(:description, "Project Description") %>
-  	<%= f.text_field :description, :class => "form-control" %>
+    <%= f.text_area :description, :class => "form-control" %>
 </div>
   	<%= submit_tag("Save", class: "btn btn-default") %>
 
