--- a/app/views/project/new.html.erb
+++ b/app/views/project/new.html.erb
@@ -3,16 +3,24 @@
 <%= form_for @project, url: {:action => :create} , :html=>{:method=>:post} do |f| %>
 <div class="form-group">
 	<%= label_tag(:sno, "ID number") %>
-  	<%= f.text_field :sno, :class => "form-control" %>
+  <%= f.text_field :sno, :class => "form-control" %>
 </div>
+
 <div class="form-group">
-  	<%= label_tag(:title, "Project Title") %>
-  	<%= f.text_field :title, :class => "form-control" %>
+  <%= label_tag(:title, "Project Title") %>
+  <%= f.text_field :title, :class => "form-control" %>
 </div>
+
 <div class="form-group">
 	<%= label_tag(:description, "Project Description") %>
-    <%= f.text_area :description, :class => "form-control" %>
+  <%= f.text_area :description, :class => "form-control" %>
 </div>
-  	<%= submit_tag("Save", class: "btn btn-default") %>
+
+<div class="form-group">
+  <%= label_tag(:status, "Status") %>
+  <%= f.select :status, @statuses, {}, {:class => "form-control"}%>
+</div>
+
+<%= submit_tag("Save", class: "btn btn-default") %>
 
 <% end %>
