--- a/app/views/project/index.html.erb
+++ b/app/views/project/index.html.erb
@@ -29,13 +29,13 @@
     <% end %>
   </tr>
 <% @projects.each do |p| %>
-  <tr onclick="location.href='<%= project_path(p.id) %>'">
-    <td><%= p.sno %></td>
-    <td><%= p.title %></td>
+  <tr>
+    <td><%= link_to p.sno, project_path(p.id) %></td>
+    <td><%= link_to p.title, project_path(p.id) %></td>
     <td><%= p.description %></td>
     <td><%= format_status(p.status) %></td>
     <% if user_signed_in? %>
-      <td><a href="#" class="btn btn-danger" role="button">Delete</a></tb>
+      <td><%= link_to "Delete", project_path(p.id), method: "delete", class: "btn btn-danger", role: "button" %></tb>
     <% end %>
   </tr>
 <% end %>
