--- a/app/views/project/show.html.erb
+++ b/app/views/project/show.html.erb
@@ -4,7 +4,7 @@
 	- <%= link_to "Edit", controller: "project", action: "edit", id: @project.id %>
 	<% end %>
 </h1>
-<h4>Status: <%= @project.status %></h4>
+<h4>Status: <%= format_status(@project.status) %></h4>
 <p><%= @project.description %></p>
 
 <h4>Updates</h4>
