progress bars work now

--- a/app/views/project/index.html.erb
+++ b/app/views/project/index.html.erb
@@ -1,18 +1,28 @@
 <!-- Progress meters -->
 <div class="row">
   <div class="span5" id="header-meter">
+    
     <!-- In progress -->
-    <h4> <i class=" icon-cogs"></i> Over all promises in progress: 20 out 70</h4>
+    <h4> <i class=" icon-cogs"></i> Overall promises in progress: <%= @num_in_progress %> out of <%= @num_total %></h4>
     <div class="progress">
-      <div class="progress-bar" role="progressbar" style="width: 30%;">
-        15%
+      <div class="progress-bar progress-bar-warning" role="progressbar" style="width: <%= @num_in_progress * 100 / @num_total %>%;">
+        <%= @num_in_progress * 100 / @num_total %>%
       </div>
     </div>
-    <!-- Achieved -->
-    <h4> <i class=" icon-ok"></i> Over all promises achieved: 10 out 70</h4>
+    
+    <!-- Partially fulfilled -->
+    <h4> <i class=" icon-cogs"></i> Overall promises partially fulfilled: <%= @num_partially_fulfilled %> out of <%= @num_total %></h4>
     <div class="progress">
-      <div class="progress-bar" role="progressbar" style="width: 15%;">
-        15%
+      <div class="progress-bar progress-bar-info" role="progressbar" style="width: <%= @num_partially_fulfilled * 100 / @num_total %>%;">
+        <%= @num_partially_fulfilled * 100 / @num_total %>%
+      </div>
+    </div>
+    
+    <!-- Achieved -->
+    <h4> <i class=" icon-ok"></i> Overall promises achieved: <%= @num_fulfilled %> out <%= @num_total %></h4>
+    <div class="progress">
+      <div class="progress-bar progress-bar-success" role="progressbar" style="width: <%= @num_fulfilled * 100 / @num_total %>%;">
+        <%= @num_fulfilled  * 100 / @num_total %>%
       </div>
     </div>
   </div>
