--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= yield :stylesheets %>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -23,7 +24,7 @@
     </p>
 </nav>
     
-<div class="container" id="content">
+<div id="content">
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
