--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,54 +1,55 @@
 <!-- Progress meters -->
-<div class="row">
-  <div class="span5" id="header-meter">
-    
-    <!-- In progress -->
-    <h4> <i class=" icon-cogs"></i> Overall promises in progress: <%= @num_in_progress %> out of <%= @num_total %></h4>
-    <div class="progress">
-      <div class="progress-bar progress-bar-warning" role="progressbar" style="width: <%= @num_in_progress * 100 / @num_total %>%;">
-        <%= @num_in_progress * 100 / @num_total %>%
+<div class="container-fluid">
+  <div class="row">
+      <!-- In progress -->
+      <h4> <i class=" icon-cogs"></i> Overall promises in progress: <%= @num_in_progress %> out of <%= @num_total %></h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-warning" role="progressbar" style="width: <%= @num_in_progress * 100 / @num_total %>%;">
+          <%= @num_in_progress * 100 / @num_total %>%
+        </div>
       </div>
-    </div>
-    
-    <!-- Partially fulfilled -->
-    <h4> <i class=" icon-cogs"></i> Overall promises partially fulfilled: <%= @num_partially_fulfilled %> out of <%= @num_total %></h4>
-    <div class="progress">
-      <div class="progress-bar progress-bar-info" role="progressbar" style="width: <%= @num_partially_fulfilled * 100 / @num_total %>%;">
-        <%= @num_partially_fulfilled * 100 / @num_total %>%
+
+      <!-- Partially fulfilled -->
+      <h4> <i class=" icon-cogs"></i> Overall promises partially fulfilled: <%= @num_partially_fulfilled %> out of <%= @num_total %></h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-info" role="progressbar" style="width: <%= @num_partially_fulfilled * 100 / @num_total %>%;">
+          <%= @num_partially_fulfilled * 100 / @num_total %>%
+        </div>
       </div>
-    </div>
-    
-    <!-- Achieved -->
-    <h4> <i class=" icon-ok"></i> Overall promises achieved: <%= @num_fulfilled %> out <%= @num_total %></h4>
-    <div class="progress">
-      <div class="progress-bar progress-bar-success" role="progressbar" style="width: <%= @num_fulfilled * 100 / @num_total %>%;">
-        <%= @num_fulfilled  * 100 / @num_total %>%
+
+      <!-- Achieved -->
+      <h4> <i class=" icon-ok"></i> Overall promises achieved: <%= @num_fulfilled %> out <%= @num_total %></h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-success" role="progressbar" style="width: <%= @num_fulfilled * 100 / @num_total %>%;">
+          <%= @num_fulfilled  * 100 / @num_total %>%
+        </div>
       </div>
-    </div>
   </div>
 </div>
 
-<table class="table">
-  <tr>
-    <td>Title</tb>
-    <td>Description</tb>
-    <td>Status</tb>
-    <% if user_signed_in? %>
-      <td></td>
-    <% end %>
-  </tr>
-<% @projects.each do |p| %>
-  <tr>
-    <td><%= link_to p.title, project_path(p.id) %></td>
-    <td><%= p.description %></td>
-    <td><%= format_status(p.status) %></td>
-    <% if user_signed_in? %>
-      <td><%= link_to "Delete", project_path(p.id), method: "delete", class: "btn btn-danger", role: "button" %></tb>
-    <% end %>
-  </tr>
-<% end %>
+<div class="container-fluid">
+  <table>
+    <tr>
+      <td class="project-title">Title</tb>
+      <td class="project-description">Description</tb>
+      <td>Status</tb>
+      <% if user_signed_in? %>
+        <td></td>
+      <% end %>
+    </tr>
+  <% @projects.each do |p| %>
+    <tr>
+      <td class="project-title"><%= link_to p.title, project_path(p.id) %></td>
+      <td><div class="project-description"><%= p.description %></div></td>
+      <td><span class="project-status background-<%= status_color(p.status) %>"></span></td>
+      <% if user_signed_in? %>
+        <td><%= link_to "Delete", project_path(p.id), method: "delete", class: "btn btn-danger", role: "button" %></tb>
+      <% end %>
+    </tr>
+  <% end %>
 
-</table>
+  </table>
+</div>
 
 <div id="disqus_thread"></div>
 <script>
