--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -29,24 +29,28 @@
 
 <div class="container-fluid">
   <table>
-    <tr>
-      <td class="project-title">Title</tb>
-      <td class="project-description">Description</tb>
-      <td>Status</tb>
-      <% if user_signed_in? %>
-        <td></td>
-      <% end %>
-    </tr>
+    <thead>
+      <tr>
+        <th class="project-title">Title</th>
+        <th class="project-description">Description</th>
+        <th class="status-cell">Status</th>
+        <% if user_signed_in? %>
+          <th></th>
+        <% end %>
+      </tr>
+    </thead>
+  <tbody>
   <% @projects.each do |p| %>
     <tr>
       <td class="project-title"><%= link_to p.title, project_path(p.id) %></td>
       <td><div class="project-description"><%= p.description %></div></td>
-      <td><span class="project-status background-<%= status_color(p.status) %>"></span></td>
+      <td class="status-cell"><span class="project-status background-<%= status_color(p.status) %>"></span></td>
       <% if user_signed_in? %>
         <td><%= link_to "Delete", project_path(p.id), method: "delete", class: "btn btn-danger", role: "button" %></tb>
       <% end %>
     </tr>
   <% end %>
+  </tbody>
 
   </table>
 </div>
