got rid of stupid white space on top of landing page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -20,3 +20,12 @@
 
 #content 
   margin: 0
+
+.navbar 
+  background-color: transparent
+  background: transparent
+  border-color: transparent
+
+
+.navbar li 
+  color: #000  
