--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -18,6 +18,11 @@
 @import "bootstrap"
 @import "bootstrap-table"
 
+@import url(https://fonts.googleapis.com/css?family=Lato)
+
+body 
+  font-family: Lato, Helvetica Neue
+
 #content 
   margin: 0
 
