--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -1,26 +1,120 @@
-
-#landing {
-  background-image: image-url("aap.jpg")
+.page {
+  width: 100%;
+  height: 750px;
 }
 
-h1 {
+.title {
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+  font-size: 35px;
+  letter-spacing: 6.12px;
+}
+
+/*Landing page*/
+#landing {
+  width: 100%;
   text-align: center;
 }
 
-.logo {
-  padding-top: 200px;
+#delhi-citizens {
+  width: 100%;
+}
+
+#landing-title {
+  position: relative;
+  top: -9.5em;
   color: white;
-  margin: 0;
+  font-family: 'Lato', sans-serif;
+  font-size: 55px;
+  letter-spacing: 9.62px;
+  text-align: center;
 }
 
 #enter-button {
   color: white;
-  border: 2px solid white;
-  padding: 5px;
+  border: 3px solid white;
+  border-radius: 5px;
+  width: 215px;
+  height: 60px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+  position: relative;
+  top: -9.3em;
+  font-family: 'Lato', sans-serif;
+  font-size: 35px;
+  letter-spacing: 6.12px;
+}
+
+/*About*/
+#about {
+  position: relative;
+  top: 8em;
+}
+
+.logo {
+  display: inline-block;
+}
+
+#about-logos {
+  position: relative;
+  top: 8em;
   text-align: center;
 }
 
-.page {
-  width: 100%;
-  height: 600px;
+#delhi-logo {
+  width: 291px;
+  height: 100px;
+  margin-right: 3em;
+}
+
+#stanford-logo {
+  width: 157px;
+  height: 152px;
+  position: relative;
+  margin-left: 3em;
+}
+
+.about-description {
+  width: 54em;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: 12em;
+  font-size: 1.2em;
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 1px;
+  line-height: 1.7em;
+  text-align: center;
+}
+
+/*Team*/
+#team {
+  position: relative;
+  top: 6em;
+  text-align: center;
+}
+
+.team-member{
+  position: relative;
+  top: 7em;
+  margin-left: 4em;
+  margin-right: 4em;
+  display: inline-block;
+}
+
+.picture {
+  width: 162px;
+  height: 162px;
+}
+
+.name {
+  position: relative;
+  top: 1.5em;
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+  font-size: 18px;
+  letter-spacing: 3.14px;
 }
