--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,4 +22,5 @@
 
 
 <h4>Comments</h4>
-<!-- TODO: integrate comments via discuz -->
+<div id="disqus_thread" class="col-md-10 col-md-offset-1"></div>
+
