--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
         <a class="navbar-brand" href="/">Manifesto Tracker</a>
     </div>
     <p class="navbar-text pull-right">
-      <span href="/#about">ABOUT</span>
-      <span href="/#team">TEAM</span>
-      <span href="/#contact">CONTACT</span>
+      <span><a href="/#about">ABOUT</a></span>
+      <span><a href="/#team">TEAM</a></span>
+      <span><a href="/#contact">CONTACT</a></span>
     </p>
 </nav>
     
