--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -1,9 +1,10 @@
-<div id="landing" class="page">
-  <%=image_tag("aap.jpg", alt: "New Delhi Citizens", id:"delhi-citizens")%>
-  <h1 id="landing-title">MANIFESTO TRACKER</h1>
-  <a id="enter-button" href="<%= projects_path %>">ENTER</a>
+<div name="landing" id="landing" class="page">
+  <div id="landing-content">
+    <h1 id="landing-title">MANIFESTO TRACKER</h1>
+    <a id="enter-button" href="<%= projects_path %>">ENTER</a>
+  </div>
 </div>
-<div id="about" class="page">
+<div name="about" id="about" class="page">
   <h2 class="title">ABOUT</h2>
   <div id="about-logos">
 	  <%=image_tag("logo.png", alt: "New Delhi Government Logo", id:"delhi-logo", class:"logo")%>
@@ -11,9 +12,9 @@
 	</div>
   <p class="about-description">This Manifesto Tracker is a project of the Aam Aadmi Party-led Government of Delhi. It was built to keep track of the promises made by the government in their election manifesto. The manifesto tracker will be used by the government to inform the citizens of work in progress and get feedback on finished projects. This will truly democratize the political system, make government accountable to its people and make politics mean more than just elections. This is a next generation tool to ensure political accountability in Delhi.</p>
 </div>
-<div id="team" class="page">
+<div name="team" id="team" class="page">
   <h2 class="title">MEET THE TEAM</h2>
-  <div id="team">
+  <div id="team-container">
   	<div class="team-member">
   		<%=image_tag("michelle.png", alt: "Michelle Guo", class:"picture")%>
   		<div class="name">
@@ -34,6 +35,6 @@
   	</div>
 	</div>
 </div>
-<div class="page">
+<div name="contact" id="contact" class="page">
 	<h2 class="title">CONTACT US</h2>
 </div>
