--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.page-full {
+  position: relative;
+  top: 60px;
+}
+
 .project-progress {
     overflow: hidden;
     height: 60px;
