--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,26 +1,30 @@
-<a href="/" class="btn btn-info" role="button">Go back to Projects</a>
-<h1><%= @project.title %> 
-	<% if user_signed_in? %>
-	- <%= link_to "Edit", controller: "project", action: "edit", id: @project.id %>
-	<% end %>
-</h1>
-<h4>Status: <%= format_status(@project.status) %></h4>
-<p><%= @project.description %></p>
+<div class="container-fluid page-full">
 
-<h4>Updates</h4>
-<% if user_signed_in? %>
-    <%= link_to "Add Update", controller: "update", action: "new", project_id: @project.id %>
-<% end %>
+  <a href="<%= projects_path %>" class="back-link">Go back to Projects</a>
+  
+  <h2 class="text-center"><%= @project.title %> 
+    <% if user_signed_in? %>
+    - <%= link_to "Edit", controller: "project", action: "edit", id: @project.id %>
+    <% end %>
+  </h2>
+  <h4 class="text-center <%= status_color(@project.status) %>"><%= format_status(@project.status) %></h4>
+  <p><%= @project.description %></p>
 
-<% @updates.each do |u| %>
+  <hr/>
+  <h4>Updates</h4>
+  <% if user_signed_in? %>
+      <%= link_to "Add Update", controller: "update", action: "new", project_id: @project.id %>
+  <% end %>
 
-	<%= u.title %>
-	<%= u.description %>
-	<%= u.url %>
+  <% @updates.each do |u| %>
 
-<% end %>
+    <%= u.title %>
+    <%= u.description %>
+    <%= u.url %>
 
+  <% end %>
 
-<h4>Comments</h4>
-<div id="disqus_thread" class="col-md-10 col-md-offset-1"></div>
+  <hr />
+  <div id="disqus_thread" class="col-md-10 col-md-offset-1"></div>
 
+</div>
