fixed stylesheet for rails background image

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -14,7 +14,7 @@
 #landing {
   width: 100%;
   text-align: center;
-  background: url(aap.jpg);
+  background: image-url("aap.jpg");
   background-size: cover;
 }
 
