implemented fixed nav bar with white styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,21 @@
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Manifesto Tracker</a>
+    </div>
+    <div>
+      <ul class="nav navbar-nav navbar-right">
+        <!-- <li class="active"><a href="#">Home</a></li> -->
+        <li><a href="/#about">ABOUT</a></li>
+        <li><a href="/#team">TEAM</a></li> 
+        <li><a href="/#contact">CONTACT</a></li> 
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- <nav class="navbar navbar-default navbar-fixed-top">
     <div class="navbar-header page-scroll">
         <a class="navbar-brand" href="/">Manifesto Tracker</a>
     </div>
@@ -17,7 +32,7 @@
       <span><a href="/#team">TEAM</a></span>
       <span><a href="/#contact">CONTACT</a></span>
     </p>
-</nav>
+</nav> -->
     
 <div id="content">
     <% if notice %>
