--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -14,8 +14,9 @@
 #landing {
   width: 100%;
   text-align: center;
-  background: image-url("aap.jpg");
+  background: image-url("women_voting.png");
   background-size: cover;
+  background-attachment: fixed;
 }
 
 
