--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
   <div class="title">
     <h1>MANIFESTO TRACKER</h1>
     <div class="byline">
-    <p>They've made 70 promises. <br/>
+    <p>Aam Aadmi Party (AAP) made 70 promises during the 2015 Delhi Elections.<br/>
     Track them here.</p>
     </div>
   </div>
@@ -16,7 +16,6 @@
       <div class="project-progress-bar background-yellow" style="width: <%= @num_in_progress * 100 / @num_total %>%;">
         <span>IN PROGRESS <%= @num_in_progress * 100 / @num_total %> %</span>
       </div>
-      
     </div>
 
     <!-- Partially fulfilled -->
