styling of back to projects button and updated layout of project view page

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -5,6 +5,7 @@
 .page-full {
   position: relative;
   top: 60px;
+  padding-left: 30px;
 }
 
 #progress-meters {
@@ -122,4 +123,11 @@ table {
 
 .background-blue {
   background-color: #67AFAD;
+}
+
+.back-link {
+  position: relative;
+  top: 35px;
+  padding-left: 10px;
+  font-size: 18px;
 }
