--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid page-full">
 
-  <a href="<%= projects_path %>" class="back-link">Go back to Projects</a>
+  <a href="<%= projects_path %>" class="back-link">&#8592 Go back to Projects</a>
   
   <h2 class="text-center"><%= @project.title %> 
     <% if user_signed_in? %>
@@ -8,23 +8,25 @@
     <% end %>
   </h2>
   <h4 class="text-center <%= status_color(@project.status) %>"><%= format_status(@project.status) %></h4>
-  <p><%= @project.description %></p>
+  <div class="col-md-10 col-md-offset-1">
+    <p><%= @project.description %></p>
+ 
+    <hr/>
+    <h4>Updates</h4>
+    <% if user_signed_in? %>
+        <%= link_to "Add Update", controller: "update", action: "new", project_id: @project.id %>
+    <% end %>
 
-  <hr/>
-  <h4>Updates</h4>
-  <% if user_signed_in? %>
-      <%= link_to "Add Update", controller: "update", action: "new", project_id: @project.id %>
-  <% end %>
+    <% @updates.each do |u| %>
 
-  <% @updates.each do |u| %>
+      <%= u.title %>
+      <%= u.description %>
+      <%= u.url %>
 
-    <%= u.title %>
-    <%= u.description %>
-    <%= u.url %>
+    <% end %>
 
-  <% end %>
-
-  <hr />
+    <hr />
+  </div>
   <div id="disqus_thread" class="col-md-10 col-md-offset-1"></div>
 
 </div>
