--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 @import "//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css";
 @import "//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js";
 
-@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400);
 
 body {
   font-family: Lato, Helvetica Neue;
