add team pictures

--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -33,6 +33,18 @@
   			<span>GRACE WU</span>
   		</div>
   	</div>
+    <div class="team-member">
+        <%=image_tag("kyle.png", alt: "Grace Wu", class:"picture")%>
+      <div class="name">
+        <span>KYLE QIAN</span>
+      </div>
+    </div>
+    <div class="team-member">
+        <%=image_tag("catherine.png", alt: "Grace Wu", class:"picture")%>
+      <div class="name">
+        <span>CATHERINE XU</span>
+      </div>
+    </div>
 	</div>
 </div>
 <div name="contact" id="contact" class="page">
