link and style fixes for updates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,12 @@ body {
   margin: 0;
 }
 
+.back-link {
+  position: relative;
+  top: 35px;
+  padding-left: 10px;
+  font-size: 18px;
+}
 
 /*.navbar {
   background-color: transparent;
