--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -1,6 +1,7 @@
 .page {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  max-height: 100%;
 }
 
 .title {
@@ -22,7 +23,7 @@
 
 #landing-content {
   position: relative;
-  top: 40%;
+  top: 300px;
 }
 
 #landing-title {
@@ -61,7 +62,7 @@
 
 #about-logos {
   position: relative;
-  top: 8em;
+  top: 150px;
   text-align: center;
 }
 
@@ -101,14 +102,12 @@
 .team-member{
   position: relative;
   top: 7em;
-  margin-left: 2em;
-  margin-right: 2em;
-  display: inline-block;
+  height: 200px;
 }
 
 .picture {
-  width: 140px;
-  height: 140px;
+  width: 120px;
+  height: 120px;
 }
 
 .name {
@@ -116,6 +115,10 @@
   top: 1.5em;
   text-align: center;
   font-family: 'Lato', sans-serif;
-  font-size: 18px;
+  font-size: 14px;
   letter-spacing: 3.14px;
+}
+
+#contact {
+  padding-top: 100px;
 }
