--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -14,32 +14,32 @@
 </div>
 <div name="team" id="team" class="page">
   <h2 class="title">MEET THE TEAM</h2>
-  <div id="team-container">
-  	<div class="team-member">
+  <div class="container-fluid" id="team-container">
+  	<div class="team-member col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1">
   		<%=image_tag("michelle.png", alt: "Michelle Guo", class:"picture")%>
   		<div class="name">
   			<span>MICHELLE GUO</span>
   		</div>
   	</div>
-  	<div class="team-member">
+  	<div class="team-member col-md-2 col-lg-2">
   		<%=image_tag("cathy.png", alt: "Cathy Zhu", class:"picture")%>
   		<div class="name">
   			<span>CATHY ZHU</span>
   		</div>
   	</div>
-  	<div class="team-member">
+  	<div class="team-member col-md-2 col-lg-2">
   			<%=image_tag("grace.png", alt: "Grace Wu", class:"picture")%>
   		<div class="name">
   			<span>GRACE WU</span>
   		</div>
   	</div>
-    <div class="team-member">
+    <div class="team-member col-md-2 col-lg-2">
         <%=image_tag("kyle.png", alt: "Grace Wu", class:"picture")%>
       <div class="name">
         <span>KYLE QIAN</span>
       </div>
     </div>
-    <div class="team-member">
+    <div class="team-member col-md-2 col-lg-2">
         <%=image_tag("catherine.png", alt: "Grace Wu", class:"picture")%>
       <div class="name">
         <span>CATHERINE XU</span>
