--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -41,32 +41,18 @@
 </div>
 
 <div class="container-fluid">
-  <div class="col-md-10 col-md-offset-1">
-  <table class="project-table table-hover">
-    <thead>
-      <tr>
-        <th class="project-title col-md-2">Title</th>
-        <th class="project-description col-md-6">Description</th>
-        <th class="status-cell col-md-2">Status</th>
-        <% if user_signed_in? %>
-          <th></th>
-        <% end %>
-      </tr>
-    </thead>
-  <tbody>
+  <div class="col-md-10 col-md-offset-1" id="project-container">
   <% @projects.each do |p| %>
-    <tr>
-      <td class="project-title col-md-3"><%= link_to p.title, project_path(p.id) %></td>
-      <td class="col-md-6"><%= truncate_description(p.description) %></td>
-      <td class="status-cell col-md-1"><span class="project-status background-<%= status_color(p.status) %>"></span></td>
+    <div class="row project-row">
+      <div class="project-title col-md-3 text-center"><%= link_to p.title, project_path(p.id) %></div>
+      <div class="col-md-8"><%= truncate_description(p.description) %></div>
+      <div class="status-cell col-md-1 text-center"><span class="project-status background-<%= status_color(p.status) %>"></span></div>
       <% if user_signed_in? %>
-        <td><%= link_to "Delete", project_path(p.id), method: "delete", class: "btn btn-danger", role: "button" %></tb>
+        <div><%= link_to "Delete", project_path(p.id), method: "delete", class: "btn btn-danger", role: "button" %></div>
       <% end %>
-    </tr>
+    </div>
+    <hr />
   <% end %>
-  </tbody>
-
-  </table>
   </div>
 </div>
 
