--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -3,21 +3,28 @@
   <h1 class="text-center">New Update for <%= @project.title %></h1>
 
   <div class="col-md-10 col-md-offset-1">
-    <%= form_tag(controller: "updates", action: "create", method: "post") do %>
-      <div class="form-group">
+    <%= form_for @update, url: {action: 'create'} , :html=>{:method=>:post} do |f| %>
+
+    <%= f.hidden_field :project_id, :value => @project.id %>
+    
+    <div class="form-group">
       <%= label_tag(:title, "Update Title") %>
-        <%= text_field_tag(:title, nil, class: "form-control")  %>
-      </div>
-      <div class="form-group">
-        <%= label_tag(:url, "URL") %>
-        <%= text_field_tag(:url, nil, class: "form-control") %>
-      </div>
-      <div class="form-group">
+      <%= f.text_field :title, :class => "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= label_tag(:url, "URL") %>
+      <%= f.text_field :url, :class => "form-control" %>
+    </div>
+
+    <div class="form-group">
       <%= label_tag(:description, "Update Description") %>
-        <%= text_area_tag(:description, nil, class: "form-control") %>
-      </div>
-        <%= submit_tag("Save", class: "btn btn-default") %>
-    <% end %>
+      <%= f.text_area :description, :class => "form-control" %>
+    </div>
+
+    <%= submit_tag("Save", class: "btn btn-default") %>
+
+  <% end %>
   </div>
 
 </div>
