--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,26 +1,28 @@
-<h1>Create a new Project</h1>
+<div class="container-fluid page-full">
+  <h1>Create a new Project</h1>
 
-<%= form_for @project, url: {:action => :create} , :html=>{:method=>:post} do |f| %>
-<div class="form-group">
-	<%= label_tag(:sno, "ID number") %>
-  <%= f.text_field :sno, :class => "form-control" %>
+  <%= form_for @project, url: {:action => :create} , :html=>{:method=>:post} do |f| %>
+  <div class="form-group">
+    <%= label_tag(:sno, "ID number") %>
+    <%= f.text_field :sno, :class => "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= label_tag(:title, "Project Title") %>
+    <%= f.text_field :title, :class => "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= label_tag(:description, "Project Description") %>
+    <%= f.text_area :description, :class => "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= label_tag(:status, "Status") %>
+    <%= f.select :status, @statuses, {}, {:class => "form-control"}%>
+  </div>
+
+  <%= submit_tag("Save", class: "btn btn-default") %>
+
+  <% end %>
 </div>
-
-<div class="form-group">
-  <%= label_tag(:title, "Project Title") %>
-  <%= f.text_field :title, :class => "form-control" %>
-</div>
-
-<div class="form-group">
-	<%= label_tag(:description, "Project Description") %>
-  <%= f.text_area :description, :class => "form-control" %>
-</div>
-
-<div class="form-group">
-  <%= label_tag(:status, "Status") %>
-  <%= f.select :status, @statuses, {}, {:class => "form-control"}%>
-</div>
-
-<%= submit_tag("Save", class: "btn btn-default") %>
-
-<% end %>
